# Axiom-Calculator

./: .env.example  .flake8  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
docker/: Dockerfile  docker-compose.yml
docs/: DEVELOPMENT.md
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: conftest.py  test_app.py
