[project]
name = "axiom-calc"
version = "2.4.0"
description = "A retro-futuristic scientific calculator with unit conversions"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "werkzeug>=2.3.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
